--- a/index.html
+++ b/index.html
@@ -1,7 +1,49 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <style>
+    /* Basic CSS for the navigation bar */
+    nav {
+      background-color: #333;
+      overflow: hidden;
+    }
+
+    nav ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav ul li {
+      float: left;
+    }
+
+    nav ul li a {
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
+
+    nav ul li a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+  </style>
+</head>
 <body>
+
+<nav>
+  <ul>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
+
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+
 </body>
 </html>
