--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <style>
-    /* Basic CSS for the navigation bar */
+    /* CSS for the navigation bar */
     nav {
-      background-color: #333;
+      background-color: transparent; /* Make the navigation bar transparent */
       overflow: hidden;
     }
 
@@ -30,6 +30,11 @@
       background-color: #ddd;
       color: black;
     }
+
+    /* CSS for the gray background */
+    body {
+      background-color: #f2f2f2; /* Use gray background */
+    }
   </style>
 </head>
 <body>
@@ -42,7 +47,8 @@
   </ul>
 </nav>
 
-<h1>Hello World</h1>
+<h1>Artickatz</h1>
+<img src="profile pic.png" alt="Artickatz's Picture">
 <p>I'm hosted with GitHub Pages.</p>
 
 </body>
