--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     nav ul li a {
       display: block;
-      color: white; /* Make text white */
+      color: #1a472a; /* Hacker green color */
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
@@ -76,6 +76,7 @@
       width: 200px; /* Set desired width */
       height: 200px; /* Set desired height */
       object-fit: cover; /* Maintain aspect ratio */
+      border: 2px solid white; /* Add border */
     }
 
     /* Style for the about me section */
@@ -84,7 +85,6 @@
       margin-top: 20px; /* Adjust spacing as needed */
       max-width: 600px; /* Set maximum width */
       padding: 20px; /* Add padding */
-      border: 1px solid white; /* Add border */
     }
   </style>
 </head>
