--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     nav ul li a {
       display: block;
-      color: #1a472a; /* Hacker green color */
+      color: #149414; /* Hacker green color */
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
@@ -43,7 +43,7 @@
       margin: 0;
       overflow: hidden;
       background-color: black; /* Use black background */
-      color: white; /* Make text white */
+      color: #149414; /* Hacker green color */
       display: flex;
       flex-direction: column;
       justify-content: center;
