--- a/index.html
+++ b/index.html
@@ -86,6 +86,20 @@
       max-width: 600px; /* Set maximum width */
       padding: 20px; /* Add padding */
     }
+    
+    /* Style for the photo container */
+    .photo-container {
+      display: flex;
+      justify-content: space-between;
+      width: 80%; /* Adjust width as needed */
+      margin-top: 20px; /* Adjust spacing as needed */
+    }
+    
+    /* Style for the individual photos */
+    .photo-container img {
+      width: calc(16.666% - 10px); /* 6 photos with space in between */
+      border-radius: 10px; /* Add border radius */
+    }
   </style>
 </head>
 <body>
@@ -104,7 +118,16 @@
 
 <div class="about-me">
   <h2>About Me</h2>
-  <p>Insert your about me content here.</p>
+  <p>Hello I am Artickatz and this is my epic site. Some stuf about me is </p>
+</div>
+
+<div class="photo-container">
+  <img src="profile pic.png" alt="Photo 1">
+  <img src="profile pic.png" alt="Photo 2">
+  <img src="profile pic.png" alt="Photo 3">
+  <img src="profile pic.png" alt="Photo 4">
+  <img src="profile pic.png" alt="Photo 5">
+  <img src="profile pic.png" alt="Photo 6">
 </div>
 
 </body>
