--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
 </div>
 
 <div class="photo-container">
-  <img class="profile-pic" src="profile pic.png" alt="Photo 1">
-  <img class="profile-pic" src="profile pic.png" alt="Photo 2">
-  <img class="profile-pic" src="profile pic.png" alt="Photo 3">
-  <img class="profile-pic" src="profile pic.png" alt="Photo 4">
-  <img class="profile-pic" src="profile pic.png" alt="Photo 5">
-  <img class="profile-pic" src="profile pic.png" alt="Photo 6">
+  <img class="profile-pic" src="ctf_1stplace.jpg" alt="Photo 1">
+  <img class="profile-pic" src="hyack_the_power.jpg" alt="Photo 2">
+  <img class="profile-pic" src="ists_2023.jpg" alt="Photo 3">
+  <img class="profile-pic" src="MACCDC_2023.jpg" alt="Photo 4">
+  <img class="profile-pic" src="ists_2024.jpg" alt="Photo 5">
+  <img class="profile-pic" src="1701811723510.jpg" alt="Photo 6">
 </div>
 
 </body>
