--- a/index.html
+++ b/index.html
@@ -48,16 +48,63 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      height: 100vh;
+    }
+
+    /* Style for the falling elements */
+    .falling {
+      position: absolute;
+      width: 4px;
+      height: 4px;
+      background-color: #000;
+      animation: fallingAnimation linear infinite;
+    }
+
+    /* Animation for the falling effect */
+    @keyframes fallingAnimation {
+      from {
+        transform: translateY(-100px) rotate(0deg);
+      }
+      to {
+        transform: translateY(100vh) rotate(360deg);
+      }
     }
 
     /* Style for the profile picture */
-    .profile-pic {
+    img {
+      border-radius: 50%; /* Make it a circle */
       width: 200px; /* Set desired width */
       height: 200px; /* Set desired height */
       object-fit: cover; /* Maintain aspect ratio */
-      border-radius: 50%; /* Make it a circle */
       border: 2px solid white; /* Add border */
-      margin-top: 20px; /* Add margin */
+      transition: transform 0.3s ease; /* Add transition */
+    }
+
+    /* Scale up the image when hovered */
+    img:hover {
+      transform: scale(1.1);
+    }
+
+    /* Style for the about me section */
+    .about-me {
+      text-align: center;
+      margin-top: 20px; /* Adjust spacing as needed */
+      max-width: 600px; /* Set maximum width */
+      padding: 20px; /* Add padding */
+    }
+    
+    /* Style for the photo container */
+    .photo-container {
+      display: flex;
+      justify-content: space-between;
+      width: 80%; /* Adjust width as needed */
+      margin-top: 20px; /* Adjust spacing as needed */
+    }
+    
+    /* Style for the individual photos */
+    .photo-container img {
+      width: calc(16.666% - 10px); /* 6 photos with space in between */
+      border-radius: 10px; /* Add border radius */
     }
   </style>
 </head>
@@ -65,14 +112,20 @@
 
 <nav>
   <ul>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="#home">Home</a></li>
     <li><a href="#about">About</a></li>
-    <li><a href="competitions.html">Competitions</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
 
-<img class="profile-pic" src="profile pic.png" alt="Artickatz's Picture">
+<div>
+  <img src="profile pic.png" alt="Artickatz's Picture">
+</div>
+
+<div class="about-me">
+  <h2>About Me</h2>
+  <p>Insert your about me content here.</p>
+
 
 </body>
 </html>
