--- a/index.html
+++ b/index.html
@@ -124,7 +124,13 @@
 
 <div class="about-me">
   <h2>About Me</h2>
-  <p>Insert your about me content here.</p>
+  <p>
+    Hello I'm Kyle, a university student at Capitol Technology University, currently pursuing a Bachelor of Science in Cybersecurity. 
+    I have a strong passion for and keen interest in learning ethical hacking and cybersecurity concepts. 
+    My journey into the world of cybersecurity has equipped me with basic coding skills in languages like Python, C, HTML, and CSS. 
+    I'm constantly exploring new technologies and techniques to enhance my understanding and proficiency in the field.
+  </p>
+  
 
 
 </body>
