--- a/index.html
+++ b/index.html
@@ -112,8 +112,10 @@
 
 <nav>
   <ul>
-    <li><a href="#home">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="#about">About</a></li>
+    <li><a href="#skills">Skills</a></li>
+    <li><a href="#projects">Projects</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
@@ -127,12 +129,10 @@
   <p>
     Hello, I'm Kyle, a university student at Capitol Technology University, currently pursuing a Bachelor of Science in Cybersecurity. 
     I have a strong passion for and keen interest in learning ethical hacking and cybersecurity concepts. 
-    My journey into the world of cybersecurity has equipped me with basic coding skills in languages like Python, C, HTML, and CSS. 
+    My journey into the world of cybersecurity has equipped me with coding skills in languages like Python, C, HTML, and CSS. 
     I'm constantly exploring new technologies and techniques to enhance my understanding and proficiency in the field.
   </p>
-  
-  
-
+</div>
 
 </body>
 </html>
