--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       position: fixed; /* Fixed position */
       top: 0; /* Align to the top of the page */
       width: 100%; /* Full width */
-      background-color: rgba(50, 50, 50, 0.8); /* Semi-transparent gray background */
+      background-color: rgba(144, 238, 144, 0.6); /* Faded shade of light green */
       overflow: hidden;
       z-index: 999; /* Ensure it's above other content */
     }
@@ -27,7 +27,7 @@
 
     nav ul li a {
       display: block;
-      color: #149414; /* Hacker green color */
+      color: white; /* White text color */
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
