--- a/index.html
+++ b/index.html
@@ -51,25 +51,6 @@
       height: 100vh;
     }
 
-    /* Style for the falling elements */
-    .falling {
-      position: absolute;
-      width: 4px;
-      height: 4px;
-      background-color: #000;
-      animation: fallingAnimation linear infinite;
-    }
-
-    /* Animation for the falling effect */
-    @keyframes fallingAnimation {
-      from {
-        transform: translateY(-100px) rotate(0deg);
-      }
-      to {
-        transform: translateY(100vh) rotate(360deg);
-      }
-    }
-
     /* Style for the profile picture */
     img {
       border-radius: 50%; /* Make it a circle */
@@ -125,12 +106,9 @@
 </div>
 
 <div class="about-me">
-  <h2>About Me</h2>
+  <h2>Hey, I'm Kyle!</h2>
   <p>
-    Hello, I'm Kyle, a university student at Capitol Technology University, currently pursuing a Bachelor of Science in Cybersecurity. 
-    I have a strong passion for and keen interest in learning ethical hacking and cybersecurity concepts. 
-    My journey into the world of cybersecurity has equipped me with coding skills in languages like Python, C, HTML, and CSS. 
-    I'm constantly exploring new technologies and techniques to enhance my understanding and proficiency in the field.
+    I'm an undergrad with a keen interest in cybersecurity and ethical hacking. I'm passionate about learning more in these fields and exploring the endless possibilities they offer.
   </p>
 </div>
 
