--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       object-fit: cover; /* Maintain aspect ratio */
       transition: transform 0.3s ease; /* Add transition */
       margin-top: 50px; /* Add margin to the top */
+      border: 2px solid white; /* Add white border */
     }
 
     /* Scale up the image when hovered */
