--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       position: fixed; /* Fixed position */
       top: 0; /* Align to the top of the page */
       width: 100%; /* Full width */
-      background-color: rgba(144, 238, 144, 0.6); /* Faded shade of light green */
+      background-color: rgba(20, 148, 20, 0.6); /* Hacker green with slight opacity */
       overflow: hidden;
       z-index: 999; /* Ensure it's above other content */
     }
@@ -27,14 +27,14 @@
 
     nav ul li a {
       display: block;
-      color: white; /* White text color */
+      color: rgba(20, 148, 20, 1); /* Hacker green text color */
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
     }
 
     nav ul li a:hover {
-      background-color: #ddd;
+      background-color: rgba(221, 221, 221, 0.6); /* Light gray with slight opacity */
       color: black;
     }
 
@@ -77,7 +77,7 @@
     /* Style for the blinking cursor */
     .blinking-cursor {
       animation: blink 1s infinite; /* Blinking animation */
-      color: white; /* White color */
+      color: rgba(20, 148, 20, 1); /* Hacker green color */
     }
 
     /* Keyframes for the blinking animation */
