--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 
     nav ul li a {
       display: block;
-      color: rgba(20, 148, 20, 1); /* Hacker green text color */
+      color: white; /* White text color */
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
+      font-weight: bold; /* Make text bold */
     }
 
     nav ul li a:hover {
@@ -42,13 +43,19 @@
     body {
       margin: 0;
       overflow: hidden;
-      background-color: black; /* Use black background */
-      color: #149414; /* Hacker green color */
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      background-color: #111; /* Use black background */
+      color: #411; /* Dark red color */
+      font-family: Consolas, Courier, monospace; /* Consolas font */
+      font-size: 60px; /* Large font size */
+      text-shadow: 0 0 15px #411; /* Text shadow */
+      height: 100%;
+    }
+
+    div {
+      position: relative;
+      top: 50%;
+      margin: -30px auto;
+      text-align: center;
     }
 
     /* Style for the profile picture */
@@ -77,7 +84,8 @@
     /* Style for the blinking cursor */
     .blinking-cursor {
       animation: blink 1s infinite; /* Blinking animation */
-      color: rgba(20, 148, 20, 1); /* Hacker green color */
+      color: #f00; /* Red color */
+      text-shadow: 0px 0px 10px #f00; /* Red text shadow */
     }
 
     /* Keyframes for the blinking animation */
