--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       background-color: #111; /* Use black background */
       color: #411; /* Dark red color */
       font-family: Consolas, Courier, monospace; /* Consolas font */
-      font-size: 60px; /* Large font size */
+      font-size: 16px; /* Restore original font size */
       text-shadow: 0 0 15px #411; /* Text shadow */
       height: 100%;
     }
@@ -137,3 +137,4 @@
 
 </body>
 </html>
+
