--- a/index.html
+++ b/index.html
@@ -51,10 +51,7 @@
       height: 100%;
     }
 
-    div {
-      position: relative;
-      top: 50%;
-      margin: -30px auto;
+    div.container {
       text-align: center;
     }
 
@@ -66,6 +63,7 @@
       object-fit: cover; /* Maintain aspect ratio */
       transition: transform 0.3s ease; /* Add transition */
       margin-top: 50px; /* Add margin to the top */
+      margin-bottom: 20px; /* Add margin to the bottom */
       border: 2px solid white; /* Add white border */
     }
 
@@ -107,6 +105,7 @@
       margin-top: 20px; /* Adjust spacing as needed */
       max-width: 600px; /* Set maximum width */
       font-family: Arial, sans-serif; /* Use Arial or sans-serif font */
+      margin-bottom: 50px; /* Add margin to the bottom */
     }
   </style>
 </head>
@@ -122,7 +121,7 @@
   </ul>
 </nav>
 
-<div>
+<div class="container">
   <img src="profile pic.png" alt="Artickatz's Picture">
 </div>
 
@@ -137,4 +136,3 @@
 
 </body>
 </html>
-
